[package]
name = "smart-contract"
version = "0.3.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
darkfi-sdk = { path = "../../src/sdk" }
darkfi = { path = "../../", features = ["serial"]}
pasta_curves = "0.4.0"

[dev-dependencies]
darkfi = { path = "../../", features = ["wasm-runtime"] }
incrementalmerkletree = "0.3.0"
lazy-init = "0.5.1"
simplelog = "0.12.0"
sled = "0.34.7"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
