[package]
name = "smart-contract"
version = "0.3.0"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
darkfi-sdk = { path = "../../src/sdk" }
#darkfi = { path = "../../", features = [] }
darkfi-serial = { path = "../../src/serial" }

# We need to disable random using "custom" which makes the crate a noop
# so the wasm32-unknown-unknown target is enabled.
getrandom = { version = "0.2.8", features = ["custom"] }

[dev-dependencies]
darkfi = { path = "../../", features = ["wasm-runtime"] }
simplelog = "0.12.0"
sled = "0.34.7"
