[package]
name = "wasm_hello_world"
version = "0.0.1"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
darkfi-sdk = { path = "../../src/sdk", features = ["wasm"] }
darkfi-serial = { version = "0.5.0", features = ["derive", "crypto"] }

# We need to disable random using "custom" which makes the crate a noop
# so the wasm32-unknown-unknown target is enabled.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["custom"] }

[features]
default = []
no-entrypoint = []
