[package]
name = "halo2_examples"
version = "0.1.0"
authors = ["narodnik <x@x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.10"
group = "0.10"
pasta_curves = "0.1.2"
bitvec = "0.22"
rand = "0.8.4"
arrayvec = "0.7.0"
lazy_static = "1"
bigint = "4"
subtle = "2.3"
halo2 = { git="https://github.com/zcash/halo2.git", rev = "27c4187673a9c6ade13fbdbd4f20955530c22d7f" }
halo2_utilities = { git ="https://github.com/parazyd/orchard.git", rev = "5c8ac8b3630e07559252fe3eff98ca80772249d9" }
halo2_ecc = { git ="https://github.com/parazyd/orchard.git", rev = "5c8ac8b3630e07559252fe3eff98ca80772249d9" }
# orchard = { git ="https://github.com/parazyd/orchard.git", rev = "dfb5e3a92acae39af9eda7aa5f7b8c46b469c094" }

[dependencies.halo2_poseidon]
git = "https://github.com/parazyd/orchard.git"
rev = "5c8ac8b3630e07559252fe3eff98ca80772249d9"
features = ["halo2"]
