[package]
name = "halo2_examples"
version = "0.1.0"
authors = ["narodnik <x@x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.10"
group = "0.10"
pasta_curves = "0.1.2"
bitvec = "0.22"
rand = "0.8.4"
arrayvec = "0.7.0"
lazy_static = "1"
bigint = "4"
subtle = "2.3"
halo2 = "0.0"

[patch.crates-io]
halo2 = { git = "https://github.com/zcash/halo2.git", rev = "27c4187673a9c6ade13fbdbd4f20955530c22d7f" }

[dependencies.halo2_poseidon]
git = "https://github.com/parazyd/orchard.git"
rev = "0c00de95405dc8f559ebbb2b9c37f490ecbf966b"
features = ["halo2"]

[dependencies.halo2_utilities]
git = "https://github.com/parazyd/orchard.git"
rev = "0c00de95405dc8f559ebbb2b9c37f490ecbf966b"

[dependencies.halo2_ecc]
git = "https://github.com/parazyd/orchard.git"
rev = "0c00de95405dc8f559ebbb2b9c37f490ecbf966b"

# [dependencies.orchard]
# git = "https://github.com/parazyd/orchard.git"
# rev = "0c00de95405dc8f559ebbb2b9c37f490ecbf966b"
