[package]
name = "evgrd"
description = "Event graph daemon"
version = "0.5.1"
edition = "2021"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
homepage = "https://dark.fi"
repository = "https://codeberg.org/darkrenaissance/darkfi"

[[bin]]
name = "evgrd"
path = "bin/evgrd.rs"
required-features = ["build-daemon"]

[[example]]
name = "recv"
path = "example/recv.rs"

[[example]]
name = "send"
path = "example/send.rs"

[dependencies]
darkfi = {path = "../../", features = ["event-graph"]}
darkfi-serial = {version = "0.4.2", features = ["async"]}

# Event Graph DB
sled-overlay = "0.1.6"

# Crypto
blake3 = "1.5.5"

# Misc
log = "0.4.25"
url = "2.5.4"

# Daemon
smol = "2.0.2"

# evgrd deps
async-trait = {version = "0.1.86", optional = true}
futures = {version = "0.3.31", optional = true}
semver = {version = "1.0.25", optional = true}
easy-parallel = {version = "3.3.1", optional = true}
signal-hook-async-std = {version = "0.2.2", optional = true}
signal-hook = {version = "0.3.17", optional = true}
simplelog = {version = "0.12.2", optional = true}
serde = {version = "1.0.217", features = ["derive"], optional = true}
structopt = {version = "0.3.26", optional = true}
structopt-toml = {version = "0.5.1", optional = true}

[features]
build-daemon = [
    "darkfi/async-daemonize",
    "async-trait",
    "futures",
    "semver",
    "easy-parallel",
    "signal-hook-async-std",
    "signal-hook",
    "simplelog",
    "serde",
    "structopt",
    "structopt-toml",
]

#[lints]
#workspace = true

# Temp stuff
[workspace]
