[package]
name = "evgrd"
description = "Event graph daemon"
version = "0.5.1"
edition = "2021"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
homepage = "https://dark.fi"
repository = "https://codeberg.org/darkrenaissance/darkfi"

[[bin]]
name = "evgrd"
path = "bin/evgrd.rs"
required-features = ["build-daemon"]

[[example]]
name = "recv"
path = "example/recv.rs"

[[example]]
name = "send"
path = "example/send.rs"

[dependencies]
darkfi = {path = "../../", features = ["event-graph"]}
darkfi-serial = {path = "../../src/serial", features = ["async"]}

# Event Graph DB
sled-overlay = "0.1.16"

# Crypto
blake3 = "1.8.2"

# Misc
tracing = "0.1.44"
url = "2.5.7"

# Daemon
smol = "2.0.2"

# evgrd deps
async-trait = {version = "0.1.89", optional = true}
futures = {version = "0.3.31", optional = true}
semver = {version = "1.0.27", optional = true}
easy-parallel = {version = "3.3.1", optional = true}
signal-hook-async-std = {version = "0.4.0", optional = true}
signal-hook = {version = "0.4.1", optional = true}
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"], optional = true }
tracing-appender = { version = "0.2.4", optional = true }
serde = {version = "1.0.228", features = ["derive"], optional = true}
structopt = {version = "0.3.26", optional = true}
structopt-toml = {version = "0.5.1", optional = true}

[features]
build-daemon = [
    "darkfi/async-daemonize",
    "async-trait",
    "futures",
    "semver",
    "easy-parallel",
    "signal-hook-async-std",
    "signal-hook",
    "serde",
    "structopt",
    "structopt-toml",
    "tracing-subscriber",
    "tracing-appender"
]

#[lints]
#workspace = true

# Temp stuff
[workspace]
