[package]
name = "ping"
version = "0.1.0"
homepage = "https://dark.fi"
description = "Ping tool for servers"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
darkfi = {path = "../../", features = ["net"]}
darkfi-serial = {version = "0.4.2"}
url = {version = "2.5.4", features = ["serde"]}
smol = "2.0.2"

[workspace]
