[package]
name = "darkfi-sdk-py"
description = "Python bindings for Darkfi SDK"
version = "0.1.0"
edition = "2021"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
homepage = "https://dark.fi"
repository = "https://github.com/darkrenaissance/darkfi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "darkfi_sdk_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
darkfi-sdk = { path = "../sdk" }
rand = "0.8.5"
halo2_gadgets = "0.3.0"
darkfi = { path = "../../", features = ["zk", "zkas"] }