[package]
name = "darkfi-sdk"
version = "0.4.1"
homepage = "https://dark.fi"
description = "SDK used for developing smart contracts on DarkFi"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://github.com/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
doctest = false

[features]
default = []
async = ["darkfi-serial/async"]

[dependencies]
# Error handling
thiserror = "1.0.56"

# Serialization
darkfi-serial = {path = "../serial", features = ["crypto"]}

# Encoding
bs58 = "0.5.0"
sha2 = "0.10.8"

# Cryptography
blake2b_simd = "1.0.2"
blake3 = "1.5.0"
chacha20poly1305 = "0.10.1"
halo2_gadgets = "0.3.0"
bridgetree = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
pasta_curves = "0.5.1"
rand_core = "0.6.4"

# Misc
lazy_static = "1.4.0"
subtle = "2.5.0"

[dev-dependencies]
halo2_proofs = {version = "0.3.0", features = ["dev-graph", "sanity-checks"]}
halo2_gadgets = {version = "0.3.0", features = ["test-dependencies"]}
rand = "0.8.5"
