[package]
name = "darkfi-sdk"
version = "0.4.1"
homepage = "https://dark.fi"
description = "SDK used for developing smart contracts on DarkFi"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
doctest = false

[features]
default = []
async = ["darkfi-serial/async"]
wasm = []

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
darkfi-serial = { workspace = true, features = ["crypto"] }

# Encoding
bs58 = { workspace = true }
sha2 = { workspace = true }

# Cryptography
blake2b_simd = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
halo2_gadgets = { workspace = true }
bridgetree = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
pasta_curves = { workspace = true }
rand_core = { workspace = true }

# Misc
lazy_static = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
halo2_proofs = { workspace = true, features = ["dev-graph", "sanity-checks"] }
halo2_gadgets = { workspace = true, features = ["test-dependencies"] }
rand = { workspace = true }

[lints]
workspace = true
