[package]
name = "darkfi-serial"
version = "0.4.1"
homepage = "https://dark.fi"
description = "DarkFi serialization library"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
darkfi-derive = {version = "0.4.1", path = "./derive", optional = true}
futures-lite = {version = "2.3.0", optional = true}
async-trait = {version = "0.1.80", optional = true}

# Supported types for encoding
blake3 = {version = "1.5.1", optional = true}
bridgetree = {version = "0.4.0", optional = true}
pasta_curves = {version = "0.5.1", optional = true}
semver = {version = "1.0.23", optional = true}
url = {version = "2.5.0", optional = true}
num-bigint = {version = "0.4.5", optional = true}

[features]
default = ["derive", "semver"]
derive = ["darkfi-derive"]

async = ["futures-lite", "async-trait", "darkfi-derive/async"]

collections = []
crypto = ["collections", "hash", "bridgetree", "pasta_curves"]
hash = ["blake3"]

[lints]
workspace = true

