[package]
name = "darkfi-serial"
version = "0.5.1"
homepage = "https://dark.fi"
description = "DarkFi serialization library"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
darkfi-derive = {path = "./derive", optional = true}

futures-lite = {version = "2", optional = true}
async-trait = {version = "0", optional = true}

# Supported types for encoding
blake3 = {version = "1", optional = true}
bridgetree = {version = "0.7", optional = true}
pasta_curves = {version = "0.5", optional = true}
semver = {version = "1", optional = true}
url = {version = "2", optional = true}
num-bigint = {version = "0.4", optional = true}
sled-overlay = {version = "0.1.15", optional = true}

[features]
default = ["derive", "semver"]
derive = ["darkfi-derive"]

async = ["futures-lite", "async-trait", "darkfi-derive/async"]

collections = []
crypto = ["collections", "hash", "bridgetree", "pasta_curves"]
hash = ["blake3"]
