[package]
name = "dchatd"
version = "0.4.1"
homepage = "https://dark.fi"
description = "Simple chat app p2p daemon used to document DarkFi networking code"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

# ANCHOR: dependencies
[dependencies]
# ANCHOR: darkfi
darkfi = { workspace = true, features = ["toml", "async-daemonize", "rpc"] }
darkfi-serial = { workspace = true }
# ANCHOR_END: darkfi

# daemon
easy-parallel = { workspace = true }
signal-hook-async-std = { workspace = true }
signal-hook = { workspace = true }
simplelog = { workspace = true }
smol = { workspace = true }

# arg parsing
serde = { workspace = true, features = ["derive"] }
structopt = { workspace = true }
structopt-toml = { workspace = true }

# misc
async-trait = { workspace = true }
log = { workspace = true }
url = { workspace = true }
# ANCHOR_END: dependencies

[lints]
workspace = true
