[package]
name = "dchatd"
version = "0.4.1"
homepage = "https://dark.fi"
description = "Simple chat app p2p daemon used to document DarkFi networking code"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

# ANCHOR: dependencies
[dependencies]
# ANCHOR: darkfi
darkfi = {path = "../../../", features = ["toml", "async-daemonize", "rpc"]}
darkfi-serial = "0.4.2"
# ANCHOR_END: darkfi

# daemon
easy-parallel = "3.3.1"
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.17"
simplelog = "0.12.2"
smol = "2.0.2"

# arg parsing
serde = {version = "1.0.219", features = ["derive"]}
structopt = "0.3.26"
structopt-toml = "0.5.1"

# misc
async-trait = "0.1.88"
log = "0.4.27"
url = "2.5.4"
# ANCHOR_END: dependencies

[lints]
workspace = true
