[package]
name = "dchatd"
version = "0.4.1"
homepage = "https://dark.fi"
description = "Simple chat app p2p daemon used to document DarkFi networking code"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

# ANCHOR: dependencies
[dependencies]
# ANCHOR: darkfi
darkfi = {path = "../../../", features = ["toml", "async-daemonize", "rpc"]}
darkfi-serial = "0.5.0"
# ANCHOR_END: darkfi

# daemon
easy-parallel = "3.3.1"
signal-hook-async-std = "0.3.0"
signal-hook = "0.3.18"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }
tracing-appender = "0.2.4"
smol = "2.0.2"

# arg parsing
serde = {version = "1.0.228", features = ["derive"]}
structopt = "0.3.26"
structopt-toml = "0.5.1"

# misc
async-trait = "0.1.89"
tracing = "0.1.44"
url = "2.5.7"
# ANCHOR_END: dependencies

[lints]
workspace = true
