[package]
name = "client"
version = "0.0.1"
description = "Basic client for wasm hello world example."
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://codeberg.org/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[dependencies]
# The contract
wasm_hello_world = {path = "../", features = [ "client" ]}

# Darkfi
darkfi = {path = "../../../", features = ["tx", "rpc"]}
darkfi-sdk = {path = "../../../src/sdk"}
darkfi-serial = {path = "../../../src/serial"}

# Misc
clap = {version = "4.4.11", features = ["derive"]}
rand = "0.8.5"
smol = "2.0.2"
url = "2.5.7"

[patch.crates-io]
halo2_proofs = {git="https://github.com/parazyd/halo2", branch="v031"}
halo2_gadgets = {git="https://github.com/parazyd/halo2", branch="v031"}
