[package]
name = "blockchain-explorer"
version = "0.4.1"
description = "Command-line client to display statistics or export blockchain sled database contents"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
repository = "https://github.com/darkrenaissance/darkfi"
license = "AGPL-3.0-only"
edition = "2021"

[workspace]

[dependencies]
blake3 = "1.5.1"
clap = {version = "4.4.11", features = ["derive"]}
darkfi = {path = "../../../", features = ["blockchain"]}
darkfi-sdk = {path = "../../../src/sdk"}
num-bigint = "0.4.5"
sled = "0.34.7"

[patch.crates-io]
halo2_proofs = {git="https://github.com/parazyd/halo2", branch="v4"}
halo2_gadgets = {git="https://github.com/parazyd/halo2", branch="v4"}

[lints]
workspace = true

