[package]
name = "clock_sync"
version = "0.1.0"
edition = "2021"

[dependencies.darkfi]
path = "../../../"
features = ["async-runtime", "rpc"]

[dependencies]

# Ntp request
ntp = "0.5.0"

# Misc
async-std = "1.11.0"
async-native-tls = "0.4.0"
log = "0.4.16"
serde_json = "1.0.81"
simplelog = "0.12.0"
thiserror = "1.0.24"

[workspace]
