[package]
name = "consensusd"
version = "0.3.0"
edition = "2021"

[dependencies.darkfi]
path = "../../../"
features = ["crypto", "rpc"]

[dependencies]
chrono = "0.4.19"
rand = "0.8.5"

# Async
smol = "1.2.5"
async-std = "1.11.0"
async-trait = "0.1.53"
async-channel = "1.6.1"
async-executor = "1.4.1"
easy-parallel = "3.2.0"

# Misc
clap = {version = "3.1.18", features = ["derive"]}
log = "0.4.17"
num_cpus = "1.13.1"
simplelog = "0.12.0"

# Encoding and parsing
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

[workspace]
